--- a/css/app.css
+++ b/css/app.css
@@ -205,7 +205,7 @@ input[type=number] {
 }
 
 .keycard_shell__shell-connected-img {
-    width: 247px;
+    width: 24.7rem;
 }
 
 .keycard_shell__heading-container {
@@ -287,7 +287,7 @@ input[type=number] {
     flex-wrap: wrap;
     gap: .8rem;
     width: 100%;
-    margin: 3px 0;
+    margin: .3rem 0;
 }
 
 .keycard_shell__btn {
@@ -340,7 +340,7 @@ input[type=number] {
 }
 
 .keycard_shell__load-update-container {
-    width: 360px;
+    width: 36rem;
     background-color: var(--white-4);
     border: solid .1rem var(--white-12);
     border-radius: var(--border-radius-28);
@@ -456,8 +456,8 @@ progress::-moz-progress-value {
 }
 
 .keycard_shell__connect-container {
-    width: 380px;
-    height: 420px;
+    width: 38rem;
+    height: 42rem;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -471,7 +471,7 @@ progress::-moz-progress-value {
 }
 
 .keycard_shell__h1 {
-    width: 220px;
+    width: 22rem;
     font-family: var(--heading-font);
     font-size: var(--heading-font-size);
     font-weight: var(--heading-font-weight);
@@ -487,7 +487,7 @@ progress::-moz-progress-value {
 }
 
 .keycard_shell__connect-img-container {
-    width: 332px;
+    width: 33.2rem;
 }
 
 .keycard_shell__connect-img {
