--- a/css/app.css
+++ b/css/app.css
@@ -26,25 +26,25 @@
     --neutral-solid-20: #E7EAEE;
     --scrollbar-color: rgb(60, 77, 75);
     --text-font: 'Inter', monospace;
-    --text-line-height: 2.2rem;
+    --text-line-height: 22px;
     --text-letter-spacing: -2%;
     --text-font-weight: 300;
-     --text-font-size: 1.6rem;
-    --text-font-meduim: 1.4rem;
-    --text-font-small: 1.2rem;
-    --text-small-line-height: 2rem;
+     --text-font-size: 16px;
+    --text-font-meduim: 14px;
+    --text-font-small: 12px;
+    --text-small-line-height: 20px;
     --heading-font: 'Lora', cursive;
-    --heading-line-height: 4rem;
+    --heading-line-height: 40px;
     --heading-font-weight: 500;
-    --heading-font-size: 3.2rem;
-    --heading2-font-size: 2.4rem;
+    --heading-font-size: 32px;
+    --heading2-font-size: 24px;
     --heading2-font-weight: 400;
-    --heading2-line-height: 3.2rem;
-    --input-border-radius: .8rem;
-    --border-radius-12: 1.2rem;
-    --border-radius-16: 1.6rem;
-    --border-radius-20: 2rem;
-    --border-radius-28: 2.8rem;
+    --heading2-line-height: 32px;
+    --input-border-radius: 8px;
+    --border-radius-12: 12px;
+    --border-radius-16: 16px;
+    --border-radius-20: 20px;
+    --border-radius-28: 28px;
 }
 
 html, body, div, span, applet, object, iframe,
@@ -70,10 +70,6 @@ time, mark, audio, video {
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
-}
-
-html {
-    font-size: 62.5%;
 }
 
 body {
@@ -123,7 +119,7 @@ input[disabled="disabled"], input[disabled="disabled"]:hover {
 
 ::-webkit-scrollbar {
   background-color: var(--white-4);
-  width: .5rem;
+  width: 5px;
 }
 
 ::-webkit-scrollbar-thumb:window-inactive,
@@ -134,7 +130,7 @@ input[disabled="disabled"], input[disabled="disabled"]:hover {
 
 ::-webkit-scrollbar:horizontal {
   background-color: var(--bg-color);
-  height: .5rem;
+  height: 5px;
 }
 
 input::-webkit-outer-spin-button,
@@ -181,7 +177,7 @@ input[type=number] {
     flex-wrap: wrap;
     gap: 1%;
     width: 95%;
-    height: 100vh;
+    height: 100%;
     margin: 0 2.5%;
     align-items: center;
     justify-content: center;
@@ -189,57 +185,60 @@ input[type=number] {
 }
 
 .keycard_shell__shell-connected-container {
-    flex-basis: calc(50% - .5rem);
-    width: calc(50% - .5rem);
+    flex-basis: calc(50% - 5px);
+    width: calc(50% - 5px);
     flex-grow: 0;
-    height: calc(90vh);
+    height: calc(100% - 48px);
     background-color: var(--white-4);
-    border: solid .1rem var(--white-12);
+    border: solid 1px var(--white-12);
     border-radius: var(--border-radius-28);
-    padding: 2.4rem;
+    padding: 24px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    gap: .8rem;
+    gap: 8px;
 }
 
 .keycard_shell__shell-connected-img {
-    width: 24.7rem;
+    width: 247px;
 }
 
 .keycard_shell__heading-container {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    gap: .8rem;
+    gap: 8px;
     justify-content: flex-start;
     align-items: flex-start;
 }
 
 .keycard_shell__device-update-container {
-  flex-basis: calc(50% - .5rem);
-  width: calc(50% - .5rem);
+  flex-basis: calc(50% - 5px);
+  width: calc(50% - 5px);
+  height: 100%;
   flex-grow: 0;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  gap: .8rem;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
 }
 
 .keycard_shell__update-btns-container {
     width: 100%;
-    height: calc(45vh - .4rem);
+    height: calc(50% - 28px);
     background-color: var(--white-4);
-    border: solid .1rem var(--white-12);
+    border: solid 1px var(--white-12);
     border-radius: var(--border-radius-28);
-    padding: 2.4rem;
+    padding: 24px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
-    gap: .5rem;
+    gap: 5px;
 }
 
 .keycard_shell__h2 {
@@ -255,7 +254,7 @@ input[type=number] {
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    gap: .8rem;
+    gap: 8px;
 }
 
 .keycard__shell_version-label {
@@ -271,7 +270,7 @@ input[type=number] {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: .1rem;
+    gap: 1px;
     padding: 0;
     box-sizing: border-box;
 }
@@ -285,15 +284,15 @@ input[type=number] {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    gap: .8rem;
+    gap: 8px;
     width: 100%;
-    margin: .3rem 0;
+    margin: 3px 0;
 }
 
 .keycard_shell__btn {
   font-family: var(--text-font);
   background-color: var(--white-4);
-  border: solid .1rem var(--white-8);
+  border: solid 1px var(--white-8);
   border-radius: var(--border-radius-12);
   width: 100%;
   color: var(--orange);
@@ -301,7 +300,7 @@ input[type=number] {
   font-weight: var(--heading2-font-weight);
   line-height: var(--text-line-height);
   outline: none;
-  padding: .8rem;
+  padding: 8px;
   box-sizing: border-box;
   opacity: 1;
   cursor: pointer;
@@ -310,17 +309,17 @@ input[type=number] {
 
 .keycard_shell__local-update-btn {
     background-image: url(../img/local.svg);
-    background-size: 2rem;
+    background-size: 20px;
     background-clip: padding-box;
-    background-position: right .8rem center;
+    background-position: right 8px center;
     background-repeat: no-repeat;
 }
 
 .keycard_shell__online-update-btn {
     background-image: url(../img/online.svg);
-    background-size: 2rem;
+    background-size: 20px;
     background-clip: padding-box;
-    background-position: right .8rem center;
+    background-position: right 8px center;
     background-repeat: no-repeat;
 }
 
@@ -340,16 +339,16 @@ input[type=number] {
 }
 
 .keycard_shell__load-update-container {
-    width: 36rem;
+    width: 360px;
     background-color: var(--white-4);
-    border: solid .1rem var(--white-12);
+    border: solid 1px var(--white-12);
     border-radius: var(--border-radius-28);
-    padding: 2.4rem;
+    padding: 24px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    gap: 2rem;
+    gap: 20px;
 }
 
 .keycard_shell__progress-bar-container {
@@ -357,7 +356,7 @@ input[type=number] {
     flex-direction: column;
     flex-wrap: wrap;
     width: 100%;
-    gap: .4rem;
+    gap: 4px;
 }
 
 .keycard_shell__progress-bar-label {
@@ -374,14 +373,14 @@ input[type=number] {
 
 progress {
   border-radius: var(--border-radius-16);
-  height: 1.2rem;
+  height: 12px;
   background: var(--white-4);
-  border: solid .1rem var(--white-12);
+  border: solid 1px var(--white-12);
 }
 
 progress::-webkit-progress-bar {
   border-radius: var(--border-radius-16);
-  height: 1.2rem;
+  height: 12px;
   background: var(--white-4);
 }
 
@@ -411,14 +410,14 @@ progress::-moz-progress-value {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: .4rem;
+  gap: 4px;
   align-items: center;
 }
 
 .keycard_shell__message-err-img {
     color: var(--error);
-    width: 2rem;
-    height: 2rem;
+    width: 20px;
+    height: 20px;
 }
 
 .keycard_shell__load-update-btn-container {
@@ -439,7 +438,7 @@ progress::-moz-progress-value {
   outline: none;
   padding: 0;
   padding-bottom: .2em;
-  border-bottom: .1rem solid white;
+  border-bottom: 1px solid white;
 }
 
 .keycard_shell__version {
@@ -456,22 +455,22 @@ progress::-moz-progress-value {
 }
 
 .keycard_shell__connect-container {
-    width: 38rem;
-    height: 42rem;
+    width: 380px;
+    height: 440px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    gap: 1.2rem;
+    gap: 12px;
     background-color: var(--white-4);
-    border: solid .1rem var(--white-12);
+    border: solid 1px var(--white-12);
     border-radius: var(--border-radius-28);
     letter-spacing: var(--text-letter-spacing);
-    padding: 2rem;
+    padding: 20px;
     box-sizing: border-box;
 }
 
 .keycard_shell__h1 {
-    width: 22rem;
+    width: 220px;
     font-family: var(--heading-font);
     font-size: var(--heading-font-size);
     font-weight: var(--heading-font-weight);
@@ -487,7 +486,7 @@ progress::-moz-progress-value {
 }
 
 .keycard_shell__connect-img-container {
-    width: 33.2rem;
+    width: 332px;
 }
 
 .keycard_shell__connect-img {
